[progress] default unlocked abilities are now 5 (previews: 4). better comments